<?xml version="1.0"?>
<package>
  <name>zf_msgs</name>
  <version>1.8.0</version>
  <description>The zf_msgs package</description>
  <maintainer email="xuechong@yunji.tech">Xue Chong</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <export>
  </export>
</package>
